[package]
name = "anon_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tor-rtcompat = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
arti-client = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
arti-hyper = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
tls-api-openssl = "0.3.2"
axum = "0.6.18"
hyper = "0.14.26"
jsonrpc-core = "18.0.0"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.16"
regex = "1.8.3"
arti = "1.1.5"
hyper-tls = "0.5.0"
